[gd_scene load_steps=12 format=2]

[ext_resource path="res://Court/Court.gd" type="Script" id=1]
[ext_resource path="res://Court/Basket.tscn" type="PackedScene" id=2]
[ext_resource path="res://Court/PlayerPivot.gd" type="Script" id=3]
[ext_resource path="res://Court/Camera.gd" type="Script" id=4]
[ext_resource path="res://Court/Rays.gd" type="Script" id=5]
[ext_resource path="res://Court/Ball.tscn" type="PackedScene" id=6]

[sub_resource type="SpatialMaterial" id=1]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 1
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 0.339844, 0.249573, 0.249573, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.58
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo", "Roughness" ]

[sub_resource type="CubeMesh" id=2]

size = Vector3( 2, 2, 2 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[sub_resource type="ConvexPolygonShape" id=3]

points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="CylinderMesh" id=4]

top_radius = 1.0
bottom_radius = 1.0
height = 2.0
radial_segments = 64
rings = 4

[sub_resource type="CapsuleShape" id=5]

radius = 1.0
height = 1.0

[node name="Court" type="Spatial"]

script = ExtResource( 1 )

[node name="LookPos" type="Position3D" parent="."]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.68572, 0.70432 )
_sections_unfolded = [ "Pause" ]

[node name="Basket" parent="." instance=ExtResource( 2 )]

[node name="Ground" type="MeshInstance" parent="."]

editor/display_folded = true
transform = Transform( 12.3891, 0, 0, 0, 0.172287, 0, 0, 0, 9.87401, 0, 0, 5.62575 )
layers = 1
material_override = SubResource( 1 )
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Geometry", "Transform" ]

[node name="StaticBody" type="StaticBody" parent="Ground"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Ground/StaticBody"]

shape = SubResource( 3 )
disabled = false

[node name="PlayerPivot" type="Position3D" parent="."]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.251016, 0.779722 )
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Camera" type="Camera" parent="PlayerPivot"]

transform = Transform( 1, 0, 0, 0, 0.999299, -0.0374378, 0, 0.0374378, 0.999299, 0, 1.71612, 14.3656 )
projection = 0
fov = 65.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler/tracking = 0
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="PlayerPos" type="Position3D" parent="PlayerPivot"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.31678, 10.6954 )

[node name="PlayerBody" type="RigidBody" parent="PlayerPivot"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.31678, 10.6954 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = false
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
axis_lock = 0
linear_velocity = Vector3( 0, 0, 0 )
linear_damp = -1.0
angular_velocity = Vector3( 0, 0, 0 )
angular_damp = -1.0
_sections_unfolded = [ "Transform" ]

[node name="Player" type="MeshInstance" parent="PlayerPivot/PlayerBody"]

transform = Transform( 0.336413, 0, 0, 0, 0.378802, 0, 0, 0, 0.334499, 0, 0.0456269, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 4 )
skeleton = NodePath("..")
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="PlayerPivot/PlayerBody"]

transform = Transform( 0.336413, 0, 0, 0, -1.32758e-008, -0.303715, 0, 0.334499, -1.46214e-008, 0, 0.101273, 0 )
shape = SubResource( 5 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="SpotLight" type="SpotLight" parent="PlayerPivot/PlayerBody"]

transform = Transform( 1, 0, 0, 0, -0.0396789, 0.999213, 0, -0.999213, -0.0396789, 0, 2.35829, -0.0376711 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_negative = false
light_specular = 0.5
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
spot_range = 5.0
spot_attenuation = 1.0
spot_angle = 45.0
spot_angle_attenuation = 1.0
_sections_unfolded = [ "Shadow" ]

[node name="Rays" type="Spatial" parent="PlayerPivot/PlayerBody"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.251385, 0 )
script = ExtResource( 5 )

[node name="Ray1" type="RayCast" parent="PlayerPivot/PlayerBody/Rays"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.332742, 0.0689487, 0 )
enabled = true
cast_to = Vector3( 0, -0.2, 0 )
collision_mask = 1
type_mask = 15

[node name="Ray2" type="RayCast" parent="PlayerPivot/PlayerBody/Rays"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.332659, 0.0689487, 0 )
enabled = true
cast_to = Vector3( 0, -0.2, 0 )
collision_mask = 1
type_mask = 15

[node name="Shot" type="Position3D" parent="PlayerPivot/PlayerBody"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.570736, -0.587349 )

[node name="ShotAim" type="Position3D" parent="PlayerPivot"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.39931, 6.47628 )
_sections_unfolded = [ "Transform" ]

[node name="Lights" type="Spatial" parent="."]

editor/display_folded = true

[node name="DirectionalLight" type="DirectionalLight" parent="Lights"]

transform = Transform( 0.913582, 0.288734, -0.286358, 0, 0.704179, 0.710022, 0.406654, -0.648664, 0.643325, -8.80645, 5.85438, 7.74522 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_negative = false
light_specular = 0.5
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0

[node name="SpotLight" type="SpotLight" parent="Lights"]

transform = Transform( 1, 0, 0, 0, 0.0196712, 0.999807, 0, -0.999807, 0.0196712, 0, 8.52901, 5.89309 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_negative = false
light_specular = 0.5
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
spot_range = 21.2631
spot_attenuation = 1.0
spot_angle = 59.364
spot_angle_attenuation = 1.0
_sections_unfolded = [ "Shadow" ]

[node name="Rack" type="Position3D" parent="."]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.850988, 6.00368 )

[node name="Ball1" parent="Rack" instance=ExtResource( 6 )]

[node name="Ball2" parent="Rack" instance=ExtResource( 6 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.836563, 0, 0 )

[node name="Ball3" parent="Rack" instance=ExtResource( 6 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.78387, 0, 0 )


